@@ -43,6 +43,9 @@ import com.sun.jersey.api.core.HttpRequestContext;
 import com.sun.jersey.api.core.HttpResponseContext;
 import com.sun.jersey.api.view.Viewable;
 import com.sun.jersey.core.header.QualitySourceMediaType;
+import com.sun.jersey.spi.container.ContainerRequest;
+import com.sun.jersey.spi.container.ContainerRequestFilter;
+import com.sun.jersey.spi.container.ContainerResponseFilter;
 import com.sun.jersey.spi.uri.rules.UriRule;
 import com.sun.jersey.spi.uri.rules.UriRuleContext;
 import java.util.List;
@@ -58,10 +61,19 @@ import javax.ws.rs.core.MediaType;
 public class ViewableRule implements UriRule {
     private final List<QualitySourceMediaType> priorityMediaTypes;
 
+    private final List<ContainerRequestFilter> requestFilters;
+
+    private final List<ContainerResponseFilter> responseFilters;
+
     @Context TemplateContext tc;
 
-    public ViewableRule(List<QualitySourceMediaType> priorityMediaTypes) {
+    public ViewableRule(
+            List<QualitySourceMediaType> priorityMediaTypes,
+            List<ContainerRequestFilter> requestFilters,
+            List<ContainerResponseFilter> responseFilters) {
         this.priorityMediaTypes = priorityMediaTypes;
+        this.requestFilters = requestFilters;
+        this.responseFilters = responseFilters;
     }
 
     public final boolean accept(CharSequence path, Object resource, UriRuleContext context) {
@@ -80,6 +92,18 @@ public class ViewableRule implements UriRule {
         ResolvedViewable rv = tc.resolveViewable(v);
         if (rv == null)
             return false;
+
+        // Push the response filters
+        context.pushContainerResponseFilters(responseFilters);
+
+        // Process the request filter
+        if (!requestFilters.isEmpty()) {
+            ContainerRequest containerRequest = context.getContainerRequest();
+            for (ContainerRequestFilter f : requestFilters) {
+                containerRequest = f.filter(containerRequest);
+                context.setContainerRequest(containerRequest);
+            }
+        }
 
         final HttpResponseContext response = context.getResponse();
 
